--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 URL="mongodb+srv://server1:server1234@cluster0.7sgn9oy.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 PORT=3000
+SEC_KEY=rohitmalav
